# autonomous-spacecraft-rl

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile
backend/app/: main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: __init__.py  policy.py  simulation.py  telemetry.py
backend/app/core/: __init__.py  runtime.py  settings.py
backend/model/: generate.py  generate.sh
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.vue  api.js  router.js  styles.css
frontend/src/components/: ServicePage.vue
frontend/src/pages/: DashboardPage.vue  HomePage.vue  RocketPage.vue
notebook/: Dockerfile  launch-1.ipynb  launch-2.ipynb  launch-3.ipynb  mission.ipynb
